# ndjson-fake-embeddings

./: .gitignore  Cargo.toml
src/: main.rs
