[package]
name = "ndjson-fake-embeddings"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.94"
bytemuck = "1.20.0"
fs-err = "3.0.0"
memmap2 = "0.9.5"
mimalloc = "0.1.43"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order", "raw_value"] }
